--- a/iOS/Kefi/Base.lproj/Main.storyboard
+++ b/iOS/Kefi/Base.lproj/Main.storyboard
@@ -324,39 +324,39 @@
                                             <action selector="reviewButtonTouchUp:forEvent:" destination="wCa-SH-iDl" eventType="touchUpInside" id="pGt-b8-Wpc"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="VHa-GT-fXs">
-                                        <rect key="frame" x="263" y="433" width="45" height="30"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" title="cancel">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <segue destination="IkS-tb-46b" kind="unwind" unwindAction="unwindToPlaceDetail:" id="aFj-tF-PCg"/>
-                                        </connections>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="How do you feel?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HJd-ia-wPO">
-                                <rect key="frame" x="103" y="57" width="115" height="32"/>
+                                <rect key="frame" x="103" y="73" width="115" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label autoresizesSubviews="NO" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Place Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rXU-8i-va5">
-                                <rect key="frame" x="35" y="29" width="250" height="21"/>
+                                <rect key="frame" x="35" y="58" width="250" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label hidden="YES" opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What's the vibe?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="kvq-Wq-Ppj">
-                                <rect key="frame" x="139" y="62" width="118" height="21"/>
+                                <rect key="frame" x="139" y="78" width="118" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="VHa-GT-fXs">
+                                <rect key="frame" x="255" y="20" width="45" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="cancel">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="IkS-tb-46b" kind="unwind" unwindAction="unwindToPlaceDetail:" id="aFj-tF-PCg"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
@@ -389,11 +389,6 @@
                         <outletCollection property="L1EnergyCircles" destination="rLu-DJ-XXB" id="fvl-b9-TJK"/>
                         <outletCollection property="L1EnergyCircles" destination="Lld-ew-SOq" id="zy5-8i-tZc"/>
                         <outletCollection property="L1EnergyCircles" destination="MK1-Oh-CI5" id="7NX-wR-vAI"/>
-                        <outletCollection property="sentimentCircles" destination="onz-A6-ax2" id="A5w-S5-sgm"/>
-                        <outletCollection property="sentimentCircles" destination="oOI-lE-Jeb" id="Deq-ur-7R1"/>
-                        <outletCollection property="sentimentCircles" destination="eP7-7A-tAd" id="1pw-rT-hfX"/>
-                        <outletCollection property="sentimentCircles" destination="KCj-C5-5MC" id="G5G-ba-BHW"/>
-                        <outletCollection property="sentimentCircles" destination="Bvm-RL-7d1" id="bXk-IC-Ieh"/>
                         <outletCollection property="Vert1EnergyCircles" destination="haE-4a-ExV" id="Vv8-UY-HV4"/>
                         <outletCollection property="Vert1EnergyCircles" destination="tkh-Uf-swV" id="aIj-7I-ssH"/>
                         <outletCollection property="Vert1EnergyCircles" destination="wVF-7w-ELx" id="Go6-Tg-pXz"/>
@@ -406,6 +401,11 @@
                         <outletCollection property="Vert3EnergyCircles" destination="HNH-FB-9Gk" id="qpy-Zl-Tuw"/>
                         <outletCollection property="Vert2EnergyCircles" destination="gYJ-vB-eAF" id="lMU-uU-ECl"/>
                         <outletCollection property="Vert3EnergyCircles" destination="qvK-zw-Ecd" id="Osw-Kd-NRP"/>
+                        <outletCollection property="sentimentCircles" destination="Bvm-RL-7d1" id="c3F-LX-jCs"/>
+                        <outletCollection property="sentimentCircles" destination="onz-A6-ax2" id="EVS-nK-WZh"/>
+                        <outletCollection property="sentimentCircles" destination="oOI-lE-Jeb" id="AC0-zh-Up2"/>
+                        <outletCollection property="sentimentCircles" destination="eP7-7A-tAd" id="ed4-Ev-A7R"/>
+                        <outletCollection property="sentimentCircles" destination="KCj-C5-5MC" id="HSr-Ad-48D"/>
                         <segue destination="d9R-wC-4Vk" kind="modal" identifier="SubmitReviewDetailSegue" modalTransitionStyle="crossDissolve" animates="NO" id="MBc-02-YWn"/>
                     </connections>
                 </viewController>
